# NeonAI

./: README.md
backend/: README.md  db.sqlite3  manage.py  pyproject.toml
backend/NeoAI/: asgi.py  settings.py  urls.py  wsgi.py
backend/query/: model.py  model_gem.py  urls.py  utils.py  views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/pages/: ChatPage.jsx  Home.jsx
